fix(docs-evergreen): Fix navbar overflowing and sticku sidebar

--- a/src/_sass/components/_footer.scss
+++ b/src/_sass/components/_footer.scss
@@ -13,7 +13,7 @@
   &__container {
     position: relative;
     z-index: 1;
-    max-width: 1150px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
     padding-left: 15px;
