--- a/src/_sass/components/_stage.scss
+++ b/src/_sass/components/_stage.scss
@@ -1,7 +1,7 @@
 .stage {
   display: flex;
   width: 100%;
-  max-width: 1150px;
+  max-width: 1200px;
   margin: 0 auto;
 
   @include breakpoint(large up) {
