--- a/src/_sass/generics/_standardize.scss
+++ b/src/_sass/generics/_standardize.scss
@@ -16,7 +16,6 @@ html {
   box-sizing: border-box; /* 1 */
   line-height: 1.15; /* 2 */
   text-size-adjust: 100%; /* 3 */
-  overflow-x: hidden;
 }
 
 *,
