--- a/src/_sass/pages/_page.scss
+++ b/src/_sass/pages/_page.scss
@@ -16,7 +16,8 @@
 
   &__body {
     flex: 1;
-    
+    max-width: 100%;
+
     @include breakpoint(xlarge up) {
       max-width: 690px;
     }
